# rusty-bun

./: .gitignore  Cargo.toml  README.md  STRUCTURAL-FINDINGS.md  bun-bug-catcher.md  edge-stratum-map.md  seed.md  target  trajectory.md
derive-constraints/: Cargo.toml  README.md
derive-constraints/src/: cluster.rs  couple.rs  invert.rs  main.rs  scan.rs  seams.rs
derive-constraints/src/extract/: mod.rs  rust.rs  spec.rs  ts_js.rs  zig.rs
host/: Cargo.toml  HOST-INTEGRATION-PATTERN.md  RUN-NOTES.md
host-v2/: AUDIT.md  Cargo.toml  build.rs
host-v2/fixtures/: builtin_stubs.mjs  builtin_stubs_extended.mjs  builtin_stubs_throw.mjs  fs_smoke.mjs  smoke.mjs
host-v2/src/: assert.rs  crypto.rs  events.rs  fs.rs  http.rs  https.rs  lib.rs  main.rs  module_ns.rs  node_stubs.rs  os.rs  path.rs  process.rs  register.rs  stream.rs  timer.rs  tty.rs  url.rs  util.rs  zlib.rs
host-v2/tests/: binary_smoke.rs  builtin_stubs.rs  builtin_stubs_extended.rs  fs_smoke.rs  host_smoke.rs  tuple_a_b_close.rs
host/examples/: hello.js  runtime-demo.js
host/src/: dns_async.rs  lib.rs  main.rs  reactor.rs  signals.rs  spawn_async.rs  tz.rs  watchers.rs
host/tests/: integration.rs
host/tests/fixtures/api-surface-enumerator/: main.mjs
host/tests/fixtures/consumer-acorn-app/: main.mjs  package.json
host/tests/fixtures/consumer-acorn-walk-app/: main.mjs  package.json
host/tests/fixtures/consumer-aes-gcm-suite/: package.json
host/tests/fixtures/consumer-aes-modes-suite/: package.json
host/tests/fixtures/consumer-ajv-app/: main.mjs  package.json
host/tests/fixtures/consumer-anthropic-app/: main.mjs  package.json
host/tests/fixtures/consumer-arg-app/: main.mjs  package.json
host/tests/fixtures/consumer-argv-parser/: package.json
host/tests/fixtures/consumer-arktype-app/: main.mjs  package.json
host/tests/fixtures/consumer-arraysort-app/: main.mjs  package.json
host/tests/fixtures/consumer-arrhelpers-app/: main.mjs  package.json
host/tests/fixtures/consumer-arrify-app/: main.mjs  package.json
host/tests/fixtures/consumer-arrutils-app/: main.mjs  package.json
host/tests/fixtures/consumer-asciitable-app/: main.mjs  package.json  probe.mjs
host/tests/fixtures/consumer-astring-app/: main.mjs  package.json
host/tests/fixtures/consumer-async-app/: main.mjs
host/tests/fixtures/consumer-async-http-server-suite/: package.json
host/tests/fixtures/consumer-async-pkg-app/: main.mjs  package.json
host/tests/fixtures/consumer-async-pool-suite/: package.json
host/tests/fixtures/consumer-axios-app/: main.mjs  package.json
host/tests/fixtures/consumer-b64u-app/: main.mjs  package.json
host/tests/fixtures/consumer-babelparser-app/: main.mjs  package.json
host/tests/fixtures/consumer-base32enc-app/: main.mjs  package.json
host/tests/fixtures/consumer-basex-app/: main.mjs  package.json
host/tests/fixtures/consumer-batch-loader/: package.json
host/tests/fixtures/consumer-bcryptjs-app/: main.mjs  package.json
host/tests/fixtures/consumer-bignumber-app/: main.mjs  package.json
host/tests/fixtures/consumer-bignumberjs-app/: main.mjs  package.json
host/tests/fixtures/consumer-bigtoa-app/: package.json
host/tests/fixtures/consumer-binary-decoder/: package.json
host/tests/fixtures/consumer-bluebird-app/: main.mjs
host/tests/fixtures/consumer-bnstr-app/: main.mjs  package.json
host/tests/fixtures/consumer-body-parser-app/: main.mjs  package.json
host/tests/fixtures/consumer-bowser-app/: main.mjs  package.json
host/tests/fixtures/consumer-brotli-app/: main.mjs
host/tests/fixtures/consumer-bun-connect-app/: main.mjs
host/tests/fixtures/consumer-bun-serve-autoserve-suite/: package.json
host/tests/fixtures/consumer-bun-serve-facade-suite/: package.json
host/tests/fixtures/consumer-bun-small-utilities-suite/: package.json
host/tests/fixtures/consumer-bunyaml-app/: main.mjs  package.json
host/tests/fixtures/consumer-bytes-app/: main.mjs  package.json
host/tests/fixtures/consumer-camelcase-app/: main.mjs  package.json
host/tests/fixtures/consumer-camelize2-app/: main.mjs  package.json
host/tests/fixtures/consumer-cborx-app/: main.mjs
host/tests/fixtures/consumer-chai-app/: main.mjs  package.json
host/tests/fixtures/consumer-chalk-app/: main.mjs  package.json
host/tests/fixtures/consumer-chalk-template-app/: main.mjs  package.json
host/tests/fixtures/consumer-chalk5-app/: main.mjs
host/tests/fixtures/consumer-change-case-app/: main.mjs  package.json
host/tests/fixtures/consumer-cheerio-app/: main.mjs
host/tests/fixtures/consumer-chokidar-app/: main.mjs  package.json
host/tests/fixtures/consumer-chokidar-probe/: main.mjs  package.json
host/tests/fixtures/consumer-circjson-app/: main.mjs  package.json
host/tests/fixtures/consumer-cjsparse-app/: main.mjs
host/tests/fixtures/consumer-cleanstack-app/: main.mjs  package.json
host/tests/fixtures/consumer-cron-app/: main.mjs  (+1 more)
host/tools/: broaden-basket.sh  classify-improvements.py  dag-coordinates.json  feature-predict.sh  feature-prediction.json  omega-3-engine-selection.md  p3-classification.md  parity-cluster-v2.sh  parity-exemplars.txt  parity-fast-v2.sh  parity-measure-static.sh  parity-measure-v2.sh  parity-measure.sh  parity-probe.mjs  parity-results-static-hostv2.json  parity-results-static-rquickjs.json  parity-results-top500-postext7-v2.json  parity-results-top500-postext7.json  parity-results-top500-postp18.json  parity-results-top500-postp19.json  parity-results-top500-postp20.json  parity-results-top500-postp48.json  parity-results-top500-postp49.json  parity-results-v2.json  parity-results.json  parity-top100.txt  parity-top500.txt  parser-corpus-baseline.md  probe-builder.sh  route2-expanded-probe.sh  route2-value-probe.sh  select-cluster.py  select-exemplars.py  stub-catalog.md  stub-list.sh  substrate-rank.sh  tag-append.sh  tag-grammar.md  tag-log.jsonl  tag-validate.sh
pilots/compression/derived/: Cargo.toml
pilots/rusty-js-runtime/derived/: Cargo.toml  EVENT-LOOP-AUDIT.md
welch/: Cargo.toml  README.md
welch/src/: compare.rs  main.rs  metrics.rs  scan.rs
(+1380 files in other folders)
