[package]
name = "derive-constraints"
version = "0.1.0"
edition = "2021"
description = "Extracts behavioural constraints from a test corpus by AST-walking test files (.test.ts / .test.js / .zig with test blocks / .rs with #[test] fns) and emitting per-file JSON of named tests + their assertion clauses. The first phase (scan) of the four-phase pipeline articulated in docs/derivation-inversion-on-bun-tests.md."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaredef/rusty-bun"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
regex = "1"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"

[[bin]]
name = "derive-constraints"
path = "src/main.rs"
