[package]
name = "rusty-bun-host"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rusty-bun-host"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.6", features = ["loader"] }

# Pilot crates exposed to JS via FFI.
rusty-buffer = { path = "../pilots/buffer/derived" }
rusty-node-fs = { path = "../pilots/node-fs/derived" }
rusty-node-path = { path = "../pilots/node-path/derived" }
rusty-textencoder = { path = "../pilots/textencoder/derived" }
rusty-urlsearchparams = { path = "../pilots/urlsearchparams/derived" }
rusty-web-crypto = { path = "../pilots/web-crypto/derived" }
