[package]
name = "rusty-bun-host"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rusty-bun-host"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.6", features = ["loader"] }
serde_json = "1"

# Pilot crates exposed to JS via FFI.
rusty-abort-controller = { path = "../pilots/abort-controller/derived" }
rusty-blob = { path = "../pilots/blob/derived" }
rusty-buffer = { path = "../pilots/buffer/derived" }
rusty-bun-file = { path = "../pilots/bun-file/derived" }
rusty-bun-serve = { path = "../pilots/bun-serve/derived" }
rusty-bun-spawn = { path = "../pilots/bun-spawn/derived" }
rusty-fetch-api = { path = "../pilots/fetch-api/derived" }
rusty-http-codec = { path = "../pilots/http-codec/derived" }
rusty-node-fs = { path = "../pilots/node-fs/derived" }
rusty-node-path = { path = "../pilots/node-path/derived" }
rusty-textencoder = { path = "../pilots/textencoder/derived" }
rusty-urlsearchparams = { path = "../pilots/urlsearchparams/derived" }
rusty-web-crypto = { path = "../pilots/web-crypto/derived" }
