[package]
name = "rusty-js-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rusty-js-ast = { path = "../../rusty-js-ast" }
rusty-js-parser = { path = "../../rusty-js-parser/derived" }
rusty-js-bytecode = { path = "../../rusty-js-bytecode/derived" }
rusty-js-gc = { path = "../../rusty-js-gc/derived" }
